evenframe/tests/snapshots/cli__init_writes_to_the_config_flag_path.snap
---
source: evenframe/tests/cli.rs
expression: transcript
---
$ evenframe init --minimal --config .evenframe/config.toml
status: Some(0)
--- stdout ---
Created .evenframe/config.toml
Created .env

Next steps:
  1. Edit .evenframe/config.toml to configure your project
  2. Add #[derive(Evenframe)] to your Rust structs
  3. Run `evenframe generate` to generate types and sync the schema
--- stderr ---

$ evenframe validate
status: Some(0)
--- stdout ---
Configuration: OK
  Output: arktype -> [PROJECT]/src/generated
Types: OK
  tables: 1, objects: 2, enums: 1
Validation passed
--- stderr ---
