evenframe/tests/snapshots/cli__validate_reports_each_check.snap
---
source: evenframe/tests/cli.rs
expression: transcript
---
$ evenframe validate
status: Some(0)
--- stdout ---
Configuration: OK
  Output: arktype -> [PROJECT]/generated
Types: OK
  tables: 1, objects: 2, enums: 1
Validation passed
--- stderr ---

$ evenframe validate
status: Some(1)
--- stdout ---
Configuration: FAILED
  Configuration error: Failed to parse configuration file [PROJECT]/evenframe.toml: TOML parse error at line 12, column 1
   |
12 | [typesync]
   | ^^^^^^^^^^
the `arktype` output cannot use mode = "per_file"; only effect and macroforge can

Types: SKIPPED, the configuration did not load
--- stderr ---
[TIME] ERROR evenframe: Evenframe failed: Validation error: validation failed with errors
